data/derived/fa15/progs/unify/prog1870.ml.out
Characters 28-35:
  if is10gte then
     ^^^^^^^
Error: This expression has type int -> bool
       but an expression was expected of type bool
